# eridu.gg

./: .gitignore  Caddyfile  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
app/: .prettierrc  README.md  package.json  pnpm-lock.yaml
app/src/: app.html
app/src/lib/: data.ts  database.ts  hoyo.ts
app/src/lib/components/: Link.svelte  Marquee.svelte
app/src/params/: uid.ts
app/src/routes/: +error.svelte  +layout.svelte  +page.svelte
app/src/routes/characters/: +page.svelte
app/src/routes/privacy/: +page.svelte
app/src/routes/signal/: +layout.svelte
server/: .gitignore  pyproject.toml
server/src/: app.py  database.py  hoyo.py
server/static/style/: signal.css
server/templates/: signal.html
server/templates/partial/: banner-details.html  banner-history.html
src/: app.html  global.css
src/lib/: data.ts  hoyo.ts  util.ts
src/lib/components/: Link.svelte  Marquee.svelte
src/params/: uid.ts
src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
src/routes/characters/: +page.svelte
src/routes/credits/: +page.svelte
src/routes/privacy/: +page.svelte
src/routes/signal/: +layout.svelte  +page.server.ts
src/routes/signal/[uid=uid]/: +layout.server.ts  (+2 more)
static/: signalrecords
webapp/: .prettierrc  README.md  package.json
webapp/app/: globals.css  layout.tsx  page.tsx
webapp/app/signal/: layout.tsx  page.tsx
webapp/components/: Footer.tsx  Marquee.tsx  Navbar.tsx
webapp/components/radix/: Button.tsx  Heading.tsx  Text.tsx
webapp/components/signal/: ChannelCard.tsx
webapp/util/: constants.ts  radix.ts
(+12 files in other folders)
