[tool.poetry]
name = "eridu-server"
version = "0.1.0"
authors = ["Ruyi Li"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
duckdb = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pylyzer = "^0.0.54"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 112
indent-width = 2

[tool.ruff.format]
quote-style = "single"
